Aditional PDF viewing adjustments

--- a/laravel/public/css/custom.css
+++ b/laravel/public/css/custom.css
@@ -15,6 +15,7 @@
     border-radius: 5px;
     padding: 5px;
     background-color: #F5F5F5;
+    height:auto;
 }
 
 img
@@ -26,13 +27,13 @@ img
 embed
 {
     width: 100%;
-    height: auto;
+    height: 85%;
 }
 
 object
 {
     width: 100%;
-    height: auto;
+    height: 85%;
 }
 
 body
@@ -104,4 +105,5 @@ input
 form
 {
     margin-block-end: 0px;
+    height:auto;
 }
