--- a/laravel/public/css/custom.css
+++ b/laravel/public/css/custom.css
@@ -1,29 +1,9 @@
-/* Sticky Footer Classes */
-#page-content {
-    flex: 1 0 auto;
-}
-
-#sticky-footer {
-    flex-shrink: none;
-}
-
-/* Other Classes for Page Styling */
-
 .container
 {
-    box-sizing: border-box;
-    border-radius: 5px;
-    padding: 5px;
     background-color: #F5F5F5;
-    height:auto;
 }
 
-img
-{
-    width: 100%;
-    height: auto;
-}
-
+/*PDF sizing options start*/
 embed
 {
     width: 100%;
@@ -36,19 +16,16 @@ object
     height: 85%;
 }
 
+/*PDF sizing options end*/
+
 body
 {
-    letter-spacing: 0.15em;
+    font-size: 1em;
     font-family: "Nunito", sans-serif;
-    font-size: 1.125em;
-    text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
-    box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
-    color: #343a40;
-    background-color: #343a40;
-    display: block;
     margin: 8px;
 }
 
+/*About page text alignment start*/
 h4
 {
     text-align: center;
@@ -59,51 +36,99 @@ p
     text-align: justify;
 }
 
+/*About page text alignment end*/
+
 .btn-calcular
 {
     background-color: #36486b;
     margin-bottom: 5px;
     margin-top: 5px;
-    padding-top: 5px;
-    padding-bottom: 5px;
     color: #ffffff;
 }
 
-.navbar
-{
-    margin-bottom: 5px;
-    letter-spacing: 5px;
-}
-
-/* Third container*/
 .bg-3
 {
     background-color: #474e5d;
     color: #ffffff;
     padding-top: 5px;
     padding-bottom: 5px;
-
 }
 
-.btn-linkee
+/* Sobre o autor*/
+.bg
 {
-    background-color: #ffffff;
-}
-
-/* Forth container*/
-.bg-4
-{
-    background-color: #343a40;
     color: #ffffff;
+    background-color: #343a40;
 }
 
+/* Start width options */
 input
 {
     text-align: right;
+    box-sizing: border-box;
+    width: 100%;
 }
 
-form
+.title
 {
-    margin-block-end: 0px;
-    height:auto;
+    font-size: 1em;
+    width: 100%;
+    text-align: left;
+}
+
+.symbol
+{
+    font-size: 1em;
+    width: 25%;
+    text-align: right;
+}
+
+.value
+{
+    font-size: 1em;
+    width: 35%;
+}
+
+.units
+{
+    font-size: 1em;
+    width: 25%;
+}
+
+.info
+{
+    font-size: 1em;
+    width: 15%;
+}
+
+/* End width options */
+
+.invalid-feedback
+{
+    display: block;
+    text-align: center;
+}
+
+@media screen and (min-width: 40em)
+{
+    .title
+    {
+        width:33%;
+    }
+    .symbol
+    {
+        width:20%;
+    }
+    .value
+    {
+        width:25%;
+    }
+    .units
+    {
+        width:15%;
+    }
+    .info
+    {
+        width:7%;
+    }
 }
